2000-01-17  John Levon  <moz@compsoc.man.ac.uk>

	* BufferView2.C:
	* lyx_gui_misc.h:
	* lyxfr1.C:
	* lyxfunc.C: kill LyXBell.

2001-01-17  Dekel Tsur  <dekelts@tau.ac.il>

	* text.C (IsBoundary): Remove the error message
	
	* WorkArea.C (work_area_handler): Decrease keyboard purge threshold.

	* lyxrc.C (setDefaults): Correct initialization value for
 	font_norm_type.

2001-01-15  Dekel Tsur  <dekelts@tau.ac.il>

	* BufferView2.C (gotoInset): New method. Replaces gotoNote() and
	gotoError().

	* text2.C (GotoNextInset): New method. Replaces GotoNextError()
	and GotoNextNote().

	* src/LyXAction.C: Added reference-next.

	* text.C (InsertChar): Use contains instead of strchr.

	* lyx_cb.C (MenuInsertLabel): Enable default value code.

2001-01-13  Dekel Tsur  <dekelts@tau.ac.il>

	* paragraph.C (SimpleTeXOnePar) Put \protect before paragraph
	alignment commands (when needed).

	* text.C (InsertChar): Add ':' to number separator chars.