@@ -107,7 +107,7 @@ public:
 		///
 		MATHMACRO_CODE,
 		///
-		ERROR_CODE,
+		ERROR_CODE
 	};
 
 	///
