@@ -1,3 +1,7 @@
+2001-01-19  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>
+
+	* lyxinset.h: remove trailing comma in enum.
+
 2001-01-17  John Levon  <moz@compsoc.man.ac.uk>
 
 	* insettext.C: kill LyXBell.
