@@ -1,3 +1,9 @@
+2001-01-19  Jean-Marc Lasgouttes  <Jean-Marc.Lasgouttes@inria.fr>
+
+	* lyxfunc.C: fix the name of the inset for LFUN_CHILDINSERT
+
+	* text2.C: add a using directive.
+
 2000-01-17  John Levon  <moz@compsoc.man.ac.uk>
 
 	* BufferView2.C:
